--- a/analog_vae/analog.tex
+++ b/analog_vae/analog.tex
@@ -39,6 +39,7 @@ where $A$ is the amplitude of each BPSK symbol and $\sigma^2=N$ is the noise var
 \end{equation}
 We generate noise samples $r_i$ by sampling a unit variance, zero mean Gaussian noise source $\mathcal{N}_i(0,1)$ that is scaled by $\sigma$:
 \begin{equation}
+\label{eq:noise_sigma}
 \begin{split}
 r_i &= \sigma \mathcal{N}_i(0,1) \\
 \sigma &= \frac{A}{\sqrt{Eb/N_0}}
@@ -60,7 +61,8 @@ In order to compare with other methods of speech communication, it is useful to 
             &= \frac{E_qR_q}{N_0B}
 \end{split}
 \end{equation}
-
+A noise bandwidth $B$ needs to be selected; common choices for HF radio are $B=3000$ Hz to compare with existing analog and digital voice modes, and $B=1$ to obtain a normalised $C/N_0$ carrier power to noise density ratio.
+ 
 At one sample per symbol, the power, the mean energy of each QPSK symbol over a window of $K$ samples is given by:
 \begin{equation}
 E_q = Var(q_i) = \frac{1}{K}\sum_{i=0}^{K-1}|q_i|^2
@@ -71,13 +73,28 @@ E_b = E_q/2
 \end{equation}
 For example if the symbol amplitude is $A=1, E_b=A^2=1$, then $E_q=1+1=2$.
 
-For transmission over multipath channels we arrange the QPSK symbols as $N_c$ parallel carriers, each running at a symbol rate of $R_s$ symbols/s, where $R_s$ is chosen based on delay spread considerations.  A typical value for HF modems is $R_s=50$ Hz. However the OFDM carriers are arranged such that the total QPSK symbol rate over the channel $R_q$ remains constant, so for a given signal power $S$, $E_q=S/R_q$ remains constant.
+For transmission over multipath channels we arrange the QPSK symbols as $N_c$ parallel carriers, each running at a symbol rate of $R_s=R_q/N_c$ symbols/s, where $R_s$ is chosen based on delay spread considerations.  Typical values for HF modems are $N_c=20$ and $R_s=50$ Hz. However the OFDM carriers are arranged such that the total symbol rate over the channel remains constant.  So for a given signal power $E_q$ and $E_b$ remain constant (Table \ref{tab:constant_eb}).
 
-The expressions above can be used as a check for the noise injection process:
+\begin{table} [H]
+\centering
+\begin{tabular}{l l l l l l l}
+ \hline
+ Waveform            & $N_c$ & $R_s$ & $R_q$ & $R_b$ & $E_q$ & $E_b$ \\
+ \hline
+ Single Carrier BPSK & 1     & -  & -    & 2000  & -        & $S/2000$ \\
+ Single Carrier QPSK & 1     & -  & 1000 & 2000  & $S/1000$ & $S/2000$ \\
+ OFDM QPSK           & 20    & 50 & 1000 & 2000  & $S/1000$ & $S/2000$ \\
+ \hline
+\end{tabular}
+\caption{$E_b$ and $E_q$ examples for single and multi-carrier OFDM waveforms for constant carrier power $S$}
+\label{tab:constant_eb}
+\end{table}
+
+In order to evaluate the ML system early in the development process it is important to ensure the noise is correctly calibrated. The expressions above can be used to check the noise injection process:
 \begin{enumerate}
-\item Set a target $E_b/N_0$ for the simulation run.
-\item Establish the target SNR from (\ref{eq:snr_theory}) evaluated using the target $E_b/N_0$.
-\item Measure $Eq=Var(q_i)$ over a sample of transmitted symbols.
+\item Set a target $E_b/N_0$ for the simulation run, and calculate $\sigma$ using (\ref{eq:noise_sigma}).
+\item Establish the equivalent target SNR from (\ref{eq:snr_theory}) evaluated using the target $E_b/N_0$.
+\item After the simulation run measure $E_q=Var(q_i)$ over a sample of transmitted symbols.
 \item Calculate measured SNR using (\ref{eq:snr_theory}) and compare. 
 \end{enumerate}
 
@@ -90,24 +107,24 @@ The expressions above can be used as a check for the noise injection process:
  Symbol & Explanation & Units \\
  \hline
  $B$ & noise or signal bandwidth & Hz \\
- $d$ & dimension of latent vector $bf{z}$ \\
+ $d$ & dimension of latent vector $\bf{z}$ \\
  $E_b/N_0$ & energy per BPSK symbol on spectral noise density \\
  $E_q/N_0$ & energy per QPSK symbol on spectral noise density \\
+ $N$ & total noise power & Watts \\
  $N_c$ & Number of carriers  \\
  $\bf{q}$ & vector of QPSK symbols \\ 
  $q_i$ & single QPSK symbol, element of $\bf{q}$ \\ 
  $R_b$ & BPSK symbol rate & symbols/second \\
  $R_q$ & QPSK symbol rate & symbols/second \\
- $R_s$ & per carrier QPSK symbol rate & symbols/second \\
+ $R_s$ & OFDM per carrier QPSK symbol rate & symbols/second \\
  $R_z$ & latent vector update rate & Hz \\
- $T_b$ & BPSK symbol period & seconds \\
- $T_q$ & QPSK symbol period & seconds \\
- $T_s$ & per carrier QPSK symbol period & seconds\\
- $T_z$ & time between latent vector updates & seconds\\
- $r_i$ & noise sample \\
  $SNR$ & signal to noise Ratio \\
  $S$ & total signal (carrier) power & Watts \\
- $N$ & total noise power & Watts \\
+ $T_b$ & BPSK symbol period & seconds \\
+ $T_q$ & QPSK symbol period & seconds \\
+ $T_s$ & OFDM per carrier QPSK symbol period & seconds\\
+ $T_z$ & time between latent vector updates & seconds\\
+ $r_i$ & noise sample \\
  $\bf{z}$ & Autoencoder output latent vector \\ 
  $z_i$ & single latent vector element of $\bf{z}$, a BPSK symbol \\ 
  \hline
