--- a/analog_vae/analog.tex
+++ b/analog_vae/analog.tex
@@ -25,7 +25,7 @@ R_q = \frac{d}{2T_z}
 \end{equation}
 For example with $T_z=0.04, d=80, R_q=1000$ symbols/s.
 
-We wish to simulate a channel with a user-defined $E_b/N_0$, where $E_b$ is the energy of each BPSK symbol, and $N_0$ is the noise power per unit bandwidth.  The energy of each BPSK symbol $E_b$ is the signal power $S$ divided by the symbol rate $R_b=1/T_b$.  The noise per unit bandwidth is the total noise power $N$ divided by the bandwidth $B$ of the system.  If we are simulating at one sample per symbol, $B=R_b$:
+We wish to simulate a channel with a user-defined $E_b/N_0$, where $E_b$ is the energy of each BPSK symbol, and $N_0$ is the noise power per unit bandwidth.  We will follow the digital PSK models and treat the signal and noise as bandpass or ``single sided".  Thus the signal and noise will be complex valued.  The energy of each BPSK symbol $E_b$ is the signal power $S$ divided by the symbol rate $R_b=1/T_b$.  The noise per unit bandwidth is the total noise power $N$ divided by the bandwidth $B$ of the system.  If we are simulating at one sample per symbol, $B=R_b$:
 \begin{equation}
 \begin{split}
 \frac{E_b}{N_0} &= \frac{S/R_b}{N/R_b} \\
@@ -33,23 +33,20 @@ We wish to simulate a channel with a user-defined $E_b/N_0$, where $E_b$ is the 
                 &= \frac{A^2}{\sigma^2}
 \end{split}
 \end{equation}
-where $A$ is the amplitude of each BPSK symbol and $\sigma^2=N$ is the noise variance (mean noise energy per sample).  If the noise is zero mean, we can estimate $\sigma^2$ over $K$ noise samples $r_i$ as:
-\begin{equation}
-\sigma^2 = \frac{1}{K}\sum_{i=0}^{K-1}r_i^2
-\end{equation}
-We generate noise samples $r_i$ by sampling a unit variance, zero mean Gaussian noise source $\mathcal{N}_i(0,1)$ that is scaled by $\sigma$:
+where $A$ is the amplitude of each BPSK symbol and $\sigma^2=N$ is the variance of the complex noise (mean noise energy per sample).  Given a set point $E_b/N_0$:
 \begin{equation}
 \label{eq:noise_sigma}
-\begin{split}
-r_i &= \sigma \mathcal{N}_i(0,1) \\
-\sigma &= \frac{A}{\sqrt{Eb/N_0}}
-\end{split}
+\sigma = \frac{A}{\sqrt{E_b/N_0}}
 \end{equation}
-
-In practice we simulate the channel by adding noise to the QPSK symbols.  Due to orthogonality, this can be simulated as two independent channels that have the same noise power:
+If the noise is zero mean, we can estimate $\sigma^2$ over $K$ noise samples $r_i$ as:
 \begin{equation}
-r_i = \sigma \mathcal{N}_{2i}(0,1) + j\sigma\mathcal{N}_{2i+1}(0,1)
+\sigma^2 = E[|r_i|^2] = \frac{1}{K}\sum_{i=0}^{K-1}|r_i|^2 
 \end{equation}
+The noise sample $r_i$ an be generated as:
+\begin{equation}
+r_i = \frac{\sigma}{\sqrt{2}}(\mathcal{N}_{2i}(0,1) + j\mathcal{N}_{2i+1}(0,1))
+\end{equation}
+where $\mathcal{N}_i(0,1)$ is the $i-th$ sample of a unit variance, zero mean, real Gaussian noise source.
 
 \section{SNR Measurement}
 
@@ -65,7 +62,7 @@ A noise bandwidth $B$ needs to be selected; common choices for HF radio are $B=3
  
 At one sample per symbol, the power, the mean energy of each QPSK symbol over a window of $K$ samples is given by:
 \begin{equation}
-E_q = Var(q_i) = \frac{1}{K}\sum_{i=0}^{K-1}|q_i|^2
+E_q = E[|q_i|^2] = \frac{1}{K}\sum_{i=0}^{K-1}|q_i|^2
 \end{equation}
 As each QPSK symbol contains 2 BPSK symbols, the energy is split evenly:
 \begin{equation}
@@ -73,7 +70,7 @@ E_b = E_q/2
 \end{equation}
 For example if the symbol amplitude is $A=1, E_b=A^2=1$, then $E_q=1+1=2$.
 
-For transmission over multipath channels we arrange the QPSK symbols as $N_c$ parallel carriers, each running at a symbol rate of $R_s=R_q/N_c$ symbols/s, where $R_s$ is chosen based on delay spread considerations.  Typical values for HF modems are $N_c=20$ and $R_s=50$ Hz. However the OFDM carriers are arranged such that the total symbol rate over the channel remains constant.  So for a given signal power $E_q$ and $E_b$ remain constant (Table \ref{tab:constant_eb}).
+To simulate transmission over multipath channels we arrange the QPSK symbols as $N_c$ parallel carriers, each running at a symbol rate of $R_s=R_q/N_c$ symbols/s, where $R_s$ is chosen based on delay spread considerations.  Typical values for HF modems are $N_c=20$ and $R_s=50$ Hz. However the OFDM carriers are arranged such that the total symbol rate over the channel remains constant.  So for a given signal power $E_q$ and $E_b$ remain constant (Table \ref{tab:constant_eb}).
 
 \begin{table} [H]
 \centering
@@ -94,10 +91,17 @@ In order to evaluate the ML system early in the development process it is import
 \begin{enumerate}
 \item Set a target $E_b/N_0$ for the simulation run, and calculate $\sigma$ using (\ref{eq:noise_sigma}).
 \item Establish the equivalent target SNR from (\ref{eq:snr_theory}) evaluated using the target $E_b/N_0$.
-\item After the simulation run measure $E_q=Var(q_i)$ over a sample of transmitted symbols.
-\item Calculate measured SNR using (\ref{eq:snr_theory}) and compare. 
+\item After the simulation run measure $E_q=E[|q_i|^2]$ over a sample of transmitted symbols.  Note that in general $E_q \ne 2$ as the encoder outputs continuous values.
+\item Calculate measured SNR using (\ref{eq:snr_theory}) and compare.
 \end{enumerate}
 
+The calibration of the noise injection can be checked by replacing the encoder output $z_i$ with discrete PSK symbols to create a digital modem, then measuring the BER at $E_b/N_0$ points, and comparing to the theoretical BER given by:
+\begin{equation}
+\begin{split}
+BER_{awgn} &= 0.5erfc(\sqrt{E_b/N_0}) \\
+BER_{multipath} &= 0.5 \left(1-\sqrt{\frac{E_b/N_0}{E_b/N_0+1}} \right)
+\end{split}
+\end{equation}
 \section{Glossary}
 
 \begin{table} [H]
